fixed share control menu position alignment

--- a/src/common/components/ArticleDetails.scss
+++ b/src/common/components/ArticleDetails.scss
@@ -11,6 +11,9 @@
 	> .children > .icon_rour3d {
 		color: #858585;
 	}
+	> .menu.align-top {
+		margin-top: -8px;
+	}
 }
 .article-details_d2vnmv > .content > .title > .bookmark {
 	position: relative;
